# rust_web_api

./: .env.example  Cargo.toml  README.md  __Rocket.toml
migrations/2024-04-17-095857_create_rustaceans/: down.sql  up.sql
migrations/2024-04-17-095904_create_crates/: up.sql
src/: main.rs  models.rs  repositories.rs  schema.rs
