[package]
name = "rust_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = "0.4"
